# ase-fimd

./: README.md  ase_fimd.py  pyproject.toml
ase_fimd.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
examples/: ase_native_interface.py
fimd/: __init__.py  calculators.py  cli.py  core.py  md.py  protocols.py  workflow.py
out_mace/: fimd_basis.npz  fimd_final.xyz  fimd_results.npz  fimd_trajectory.xyz  reference.xyz
scripts/: diagnose_freeze.py  fimd_vdos.py
tests/: conftest.py  test_ase_interface.py  test_basics.py  test_calculators_optional.py  test_native_calculators.py  test_protocols.py  test_regressions.py  test_workflow.py
workflows/: tests.yml
